add first version of the second test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries(tpmc_test ${TPMC_LIBRARIES})
 
 add_executable(tpmc_test_1_tori tpmc_test_1_tori.cc)
 target_link_libraries(tpmc_test_1_tori ${TPMC_LIBRARIES})
+
+add_executable(tpmc_test_2_rotation tpmc_test_2_rotation.cc)
+target_link_libraries(tpmc_test_2_rotation ${TPMC_LIBRARIES})
