adapt to latest changes in tpmc module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,17 +3,17 @@ add_library(tpmc_test timer.cc geometry.cc)
 add_executable(tpmc_test_1_tori tpmc_test_1_tori.cc)
 target_link_libraries(tpmc_test_1_tori ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_1_tori tpmc_test)
-add_dependencies(tpmc_test python-tpmc)
+add_dependencies(tpmc_test tpmc)
 
 add_executable(tpmc_test_2_rotation tpmc_test_2_rotation.cc)
 target_link_libraries(tpmc_test_2_rotation ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_2_rotation tpmc_test)
-add_dependencies(tpmc_test python-tpmc)
+add_dependencies(tpmc_test tpmc)
 
 add_executable(tpmc_test_3_performance tpmc_test_3_performance.cc)
 target_link_libraries(tpmc_test_3_performance ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_3_performance tpmc_test)
-add_dependencies(tpmc_test python-tpmc)
+add_dependencies(tpmc_test tpmc)
 
 add_test(test1 tpmc_test_1_tori test1.log)
 add_test(test2 tpmc_test_2_rotation test2.log)
