--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ compiler:
   - gcc
   - clang
 
+before_script:
+  - sudo apt-get update -qq
+  - sudo apt-get install libeigen3-dev
+  - sudo apt-get install libboost-dev
+
 script:
   - mkdir build
   - cd build
