--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ compiler:
 
 before_script:
   - sudo apt-get update -qq
-  - sudo apt-get install libeigen3-dev
-  - sudo apt-get install libboost-dev
+  - sudo apt-get install libeigen3-dev libboost-dev python-numpy
 
 script:
   - mkdir build
