--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ compiler:
   - gcc
   - clang
 
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libyajl-dev libxml2-dev libxqilla-dev
+  - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+
 before_script:
   - sudo apt-get update -qq
   - sudo apt-get install libeigen3-dev libboost-dev python-numpy
