allow to specify the upstream url of tpmc (default is github)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8.6)
 
 enable_testing()
 
+set(TPMC_UPSTREAM "https://www.github.com/tpmc/tpmc.git" CACHE STRING "git URL of the TPMC library")
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DENABLE_TPMC_PROFILING -DNDEBUG -std=c++11 -O3 -march=native -funroll-loops -pedantic -Wall -Wextra")
 
