don't check reference solution for full test

--- a/src/full_tests/tpmc_test_2_rotation.ini
+++ b/src/full_tests/tpmc_test_2_rotation.ini
@@ -1,5 +1,5 @@
 numberOfElements = 64
-referenceFile = tpmc_test_2_rotation.tst
+referenceFile =
 bisectionTolerance = 1e-6
 fuzzyTolerance = 1e-5
 angleStepSize = 1
