--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,8 +15,8 @@ target_link_libraries(tpmc_test_3_performance ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_3_performance tpmc_test)
 add_dependencies(tpmc_test tpmc)
 
-add_test(test1 tpmc_test_1_tori test1.log)
-add_test(test2 tpmc_test_2_rotation)
+add_test(test1 tpmc_test_1_tori basic)
+add_test(test2 tpmc_test_2_rotation basic)
 add_test(test3 tpmc_test_3_performance test3.log)
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS tpmc_test_1_tori tpmc_test_2_rotation tpmc_test_3_performance)
