update test3 to read config file and test against reference solution

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,6 @@ add_dependencies(tpmc_test tpmc)
 
 add_test(test1 tpmc_test_1_tori basic)
 add_test(test2 tpmc_test_2_rotation basic)
-add_test(test3 tpmc_test_3_performance test3.log)
+add_test(test3 tpmc_test_3_performance basic)
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS tpmc_test_1_tori tpmc_test_2_rotation tpmc_test_3_performance)
