replace hand-written ini parser and filesystem utilities by boost

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,16 +3,19 @@ add_library(tpmc_test timer.cc geometry.cc)
 add_executable(tpmc_test_1_tori tpmc_test_1_tori.cc)
 target_link_libraries(tpmc_test_1_tori ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_1_tori tpmc_test)
+target_link_libraries(tpmc_test_1_tori ${Boost_LIBRARIES})
 add_dependencies(tpmc_test tpmc)
 
 add_executable(tpmc_test_2_rotation tpmc_test_2_rotation.cc)
 target_link_libraries(tpmc_test_2_rotation ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_2_rotation tpmc_test)
+target_link_libraries(tpmc_test_2_rotation ${Boost_LIBRARIES})
 add_dependencies(tpmc_test tpmc)
 
 add_executable(tpmc_test_3_performance tpmc_test_3_performance.cc)
 target_link_libraries(tpmc_test_3_performance ${TPMC_LIBRARIES})
 target_link_libraries(tpmc_test_3_performance tpmc_test)
+target_link_libraries(tpmc_test_3_performance ${Boost_LIBRARIES})
 add_dependencies(tpmc_test tpmc)
 
 add_test(test1 tpmc_test_1_tori basic)
