--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ compiler:
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
-  - sudo apt-get install libeigen3-dev python-numpy
-  - sudo apt-get install --install-suggests libboost-dev
+  - sudo apt-get install libeigen3-dev python-numpy libboost-dev libboost-filesystem1.46-dev libboost-system1.46-dev
   - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
