migrate to travis container-based infrastructure

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,25 @@
 language: cpp
 
+sudo: false
+
 compiler:
   - gcc
   - clang
 
-before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -qq
-  - sudo apt-get install libeigen3-dev libboost-dev python-numpy
-  - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libeigen3-dev
+      - libboost-dev
+      - python-numpy
+      - gcc-4.8
+      - g++-4.8
+      - libstdc++-4.8-dev
 
 script:
   - mkdir build
